# Parton-Distribution-Function-Plotting-Tools

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
Theory/dimu/include/: dimu.h
Theory/dimu/src/: dinteg.f  dmuSK.f  wrapper.f
Theory/f123/src/: COUNTRY.f  Cteq6Pdf2010_fio.f  Ctq4Fn.f  DINTEG.f  DiLog.f  F123Lext.f  FHADHEL.f  FLMAKE.f  FMAKER.f  Fgen123.f  Fgen123L.f  Fgen123LK.f  Fnc123.f  HADLO.f  HADLO123.f  HADNLO.f  HADNLO123.f  HADNLOG123z.f  HADNLOQ123.f  HADNLOQ1230.f  HADNLOQ123K.f  HADSUB.f  HADSUB123.f  HADSUBQ123.f  HEL2TEN.f  INTUSZ.f  KRETZER1.f  PARLO.f  PARNLO.f  SERIES.f  TEN2HEL.f  TEN2SIG.f  TESTDILOG.f  TRNGLE.f  XINTNLO.f  XINTNLOG123z.f  XINTNLOQ123.f  XINTNLOQ1230.f  XINTSUB.f  XINTSUBQ123.f  (+25 more)
Theory/vbp/include/: vbp.h
Theory/vbp/src/: alfewk.f  ctq6pdf.f  dist.f  filcpl.f  filkmm.f  fmsq.f  fmsq_nuc.f  gastot.f  gcstot.f  gq1.f  gq11.f  gq1_nuc.f  gq2a.f  (+34 more)
example/: plot.ipynb
example/ErrorAnalysis/: ErrorAnalysis.ipynb
example/HepDataReader/: reader.ipynb
example/OutputReader/: DataTheo.ipynb  fit.yaml  fit_BaseCJA2.yaml  fit_BaseDeuCJA2.yaml  fit_BaseDeuDijetA2.yaml  fit_CJ.yaml  fit_CJ_DEU.yaml  fit_CTEQ.yaml  fit_CTEQ_DEU.yaml  fit_basedeucjdijet_resc.yaml  read.ipynb  settings.yaml
example/ParamFit/: fit.ipynb  fit_cj.ipynb
example/Replicas/: hessian_replica.txt  hessian_replica_p40.txt  mc.ipynb  min_replica.txt  min_replica_p40.txt
example/TMC/: F2.ipynb  TMC.ipynb  TMC_simu.ipynb  data.py  tmc-ht.ipynb
example/nPDF_plot/: iron-lead.ipynb  plot.ipynb
src/: F123Lwrapper.py  LO.py  reader.py  tools.py
(+70 files in other folders)
